Changelog
=========

1.1.7 - unreleased
------------------


1.1.6 - 2011-02-09
------------------

- Disabled Google Analytics. Closes #179.
  [hannosch]

- It wasn't possible to assign portlets except for "static text" to the
  frontpage. Closes #164.
  [hannosch]

- Fix caching and security of portraits. Closes #154.
  [stefan, hannosch]

- Improve and fix caching. Closes #172.
  [stefan, hannosch]

1.1.5 - 2011-02-08
------------------

- Added Products.PloneHotfix20110720.
  [hannosch]

1.1.4 - 2011-02-06
------------------

- Updated to Plone 4.0.3 and Zope 2.12.15 (incl. a security fix for acquiring
  docstrings).
  [hannosch]

- Repair the advanced search form. Closes #159.
  [mj, hannosch]

- Protect all urls (like search forms) from being accessed by anonymous.
  Closes #139.
  [mj, hannosch]

- Only show folderish items in the tabs/sections. Closes #144.
  [hannosch]

- Install collective.flag. Closes #173.
  [tomster]

1.1.3 - 2011-01-27
------------------

- Provide intermediate certificates in the SSL config to avoid security
  warning in Firefox. Closes #165.
  [hannosch, baekholt]

1.1.2 - 2011-01-26
------------------

- Employee listing is fixed to not look too crammed with a column visible.
  References #153. Also wrapped the employees in micro formats.
  [denys]

- Revealed 'managePortletsFallback' link. Closes #147.
  [denys]

- Fixed the layout for when we have 2 columns or only the right one.
  Closes #146.
  [denys]

- Removed left margin from comments to align the portrait's left border with
  the rest of the content.
  [denys]

- Removed rotation from the profile picture.
  [denys]

- Fixed columns on the frontpage to have equal height.
  [denys]

1.1.1 - 2011-01-19
------------------

- Whenever an user uploads a file to the intranet it is checked for viruses
  and rejected if it contains one.
  Closes https://jira.jarn.com/browse/INTRANETT-137.
  [ggozad, hannosch]

1.1 - 2011-01-14
----------------
