@@ -6,4 +6,6 @@ patches.apply()
 def initialize(context):
     from intranett.policy.upgrades import register_upgrades
     register_upgrades()
-    del register_upgrades
+
+    from AccessControl import allow_module
+    allow_module('intranett.policy.config')
