@@ -1,14 +1,18 @@
 <div id="portal-colophon"
      metal:define-macro="colophon"
-     i18n:domain="plone">
+     i18n:domain="intranett">
 <metal:slot define-slot="colophon" />
-    <ul>
+    <ul tal:define="config python:modules['intranett.policy.config']">
       <li>
-        <small><a href="http://plone.org"
-           title="This site was built using the Plone Open Source CMS/WCM."
-           i18n:attributes="title title_built_with_plone;"
-           i18n:translate="label_powered_by_plone">
-          Powered by Plone &amp; Python</a></small>
+        <small><a href="http://intranett.no/"
+           title="This site is powered by intranett.no"
+           i18n:attributes="title"
+           i18n:translate="">
+          Powered by intranett.no</a></small>
+          &mdash;
+          <small i18n:translate="">Version:
+            <span tal:replace="config/VERSION" i18n:name="number"/>
+          </small>
       </li>
     </ul>
 </div>
