@@ -4,6 +4,8 @@ Changelog
 1.1.7 - unreleased
 ------------------
 
+- Added version number to footer and adjust text.
+  [hannosch]
 
 1.1.6 - 2011-02-09
 ------------------
